@@ -1,5 +1,10 @@
 2010-05-20  Marek Safar  <marek.safar@gmail.com>
 
+	A fix for bug #569827
+	* anonymous.cs: Any issued error in probing mode means no match.
+
+2010-05-20  Marek Safar  <marek.safar@gmail.com>
+
 	* expression.cs: Search for base indexer using the closest match
 	rule.
 
